Add happened on and posted on in journey page
