# shared/openapi/openapi.yaml
@@ -102,11 +102,14 @@ components:
       type: object
       required:
         - name
+        - timestamp
         - location
         - content
         - highlight
       properties:
         name:
+          type: string
+        timestamp:
           type: string
         location:
           type: string
@@ -163,11 +166,14 @@ components:
       required:
         - name
         - timestamp
+        - created_at
         - content
       properties:
         name:
           type: string
         timestamp:
+          type: string
+        created_at:
           type: string
         content:
           type: string
